--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -125,7 +125,7 @@
   Year         = {2014},
 }
 
-@article{MR1484478,
+@article{magma,
     AUTHOR = {Bosma, Wieb and Cannon, John and Playoust, Catherine},
      TITLE = {The {M}agma algebra system. {I}. {T}he user language},
       NOTE = {Computational algebra and number theory (London, 1993)},
@@ -141,3 +141,22 @@
        DOI = {10.1006/jsco.1996.0125},
        URL = {http://dx.doi.org/10.1006/jsco.1996.0125},
 }
+
+@article{pernetstein,
+  title = "Fast computation of Hermite normal forms of random integer matrices ",
+  journal = "Journal of Number Theory ",
+  volume = "130",
+  number = "7",
+  pages = "1675 - 1683",
+  year = "2010",
+  note = "",
+  issn = "0022-314X",
+  doi = "http://dx.doi.org/10.1016/j.jnt.2010.01.017",
+  url = "http://www.sciencedirect.com/science/article/pii/S0022314X10000727",
+  author = "Clément Pernet and William Stein",
+  keywords = "Hermite normal form",
+  keywords = "Exact linear algebra "
+}
+
+
+
