--- a/doc/report.tex
+++ b/doc/report.tex
@@ -248,7 +248,7 @@ Then the quotient module
 has torsion submodule $(M/N)_\text{tors}$ equal to $\ZZ/2\ZZ$ and is of rank 1.
 \end{ex}
 
-\begin{defn}
+\begin{defn}[Short exact sequence]
 A \emph{short exact sequence of $R$-modules} is a sequence of $R$-modules and maps between them, drawn as
 \[
 0 \to M_1 \xrightarrow{f_1} M_2 \xrightarrow{f_2} M_3 \to 0
