--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -158,5 +158,45 @@
   keywords = "Exact linear algebra "
 }
 
+@book{silvermanrational,
+  title={Rational Points on Elliptic Curves},
+  author={Silverman, J.H. and Tate, J.},
+  isbn={9780387978253},
+  lccn={92004669},
+  series={Springer Undergraduate Texts in Mathematics and Technology},
+  url={http://books.google.co.uk/books?id=mAJei2-JcE4C},
+  year={1992},
+  publisher={Springer}
+}
 
+@book{silvermanarithmetic,
+  title={The Arithmetic of Elliptic Curves},
+  author={Silverman, J.H.},
+  publisher={Springer},
+}
+
+@article{klunerspauli,
+  title = "Computing residue class rings and Picard groups of orders ",
+  journal = "Journal of Algebra ",
+  volume = "292",
+  number = "1",
+  pages = "47 - 64",
+  year = "2005",
+  note = "Computational Algebra ",
+  issn = "0021-8693",
+  doi = "http://dx.doi.org/10.1016/j.jalgebra.2005.04.013",
+  url = "http://www.sciencedirect.com/science/article/pii/S0021869305002498",
+  author = "Jürgen Klüners and Sebastian Pauli"
+}
+
+@book{narkiewicz,
+  title={Elementary and Analytic Theory of Algebraic Numbers},
+  author={Narkiewicz, W.},
+  isbn={9783540219026},
+  lccn={86144486},
+  series={Springer Monographs in Mathematics},
+  url={http://books.google.co.uk/books?id=Pw4F-EVIK-oC},
+  year={2004},
+  publisher={Springer}
+}
 
