wow such work x2

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -200,3 +200,10 @@
   publisher={Springer}
 }
 
+@book{williamsalaca,
+  title={Introductory Algebraic Number Theory},
+  author={Williams, K. S. and Alaca, S.},
+  isbn={9780521832502},
+  year={2004},
+  publisher={Cambridge University Press}
+}
